# open-source-ups

./: Cargo.toml  README.MD  build.rs  memory.x  openocd.gdb  rust-toolchain.toml  stm32f4discovery.cfg
.cargo/: config.toml
hardware/pcb/: ups_main.brd  ups_main.sch  ups_main_bom.csv
include/: FreeRTOSConfig.h
src/: adc.rs  commands.rs  data.rs  intrpt.rs  main.rs  report.rs  usb.rs  usb_hid.rs  usb_serial.rs  utils.rs
src/devices/: led.rs
