[package]
name = "open-source-ups"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
freertos-cargo-build = "*"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
usb-device = "0.3.2"
usbd-hid-device = { git = "https://github.com/hacknus/usbd-hid-device" }
modular-bitfield = "0.11.2"
modular-bitfield-to-value = { version = "*", git = "https://github.com/hacknus/modular-bitfield-to-value" }
freertos-rust = "*"
micromath = "2.0.0"

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["stm32f405", "usb_fs"] # replace the model of your microcontroller here